@@ -81,7 +81,10 @@ packages actually installed on your system will be accessible.
 <LI><A HREF="doc/html/x2sys_datalist.html"> x2sys_datalist</A> Generic data extractor for ASCII and binary track data
 <LI><A HREF="doc/html/x2sys_get.html"> x2sys_get</A> Find all track files in a given area
 <LI><A HREF="doc/html/x2sys_init.html"> x2sys_init</A> Initialize a new index file database for track data
+<LI><A HREF="doc/html/x2sys_list.html"> x2sys_list</A> Extract crossover information from data base
 <LI><A HREF="doc/html/x2sys_put.html"> x2sys_put</A> Maintain index files database for track data
+<LI><A HREF="doc/html/x2sys_report.html"> x2sys_report</A> Report crossover statistics for tracks
+<LI><A HREF="doc/html/x2sys_solve.html"> x2sys_solve</A> Determine systematic corrections from crossovers
 </UL>
 <HR>
 <H3>The X_SYSTEM package</H3>
